Refactor ingress proxy and semaphore apps
